# cdkg-challenge

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
Data Model/: Connected_Data_Knowledge_Graph_Metamodel.md
QA/: CDKGQA.csv  CDKGQs_General.txt
Transcripts/: Connected Data Knowledge Graph Challenge - Transcript Metadata.csv  Connected Data Knowledge Graph Challenge - Transcript Metadata.xlsx
Transcripts/2024/: Connected Data London Roundtable July 3 2024.txt
Transcripts/Connected Data World 2021/Presentations/: Andreea Deac - Neural Algorithmic Reasoning_ Combining Classical Algorithms and Neural Networks.srt  Applying Semantic Web Standards for Knowledge Representation at Elsevier _ Veronique Moore.srt  Data Observability_ How to Eliminate Data Downtime and Start Trusting Your Data _ Barr Moses.srt  Dave Duggal - One graph to bind them all! Linking data & apps for event-driven interoperability.srt  David Amzallag & Szymon Klarman - Knowledge Mesh_ From Data Silos to Data Fabric at Global 2000 EPs.srt  Graph Thinking _ Paco Nathan _ Connected Data World 2021.srt  Natasa+recording.srt  (+19 more)
cdl_db/: Category.csv  Event.csv  GIVES_TALK_Speaker_Talk.csv  IS_CATEGORIZED_AS_Talk_Category.csv  IS_DESCRIBED_BY_Talk_Tag.csv  IS_PART_OF_Talk_Event.csv  README.md  Speaker.csv  Tag.csv  Talk.csv
src/kuzu/: .gitignore  00_extract_transcripts.py  01_extract_tag_keywords.py  01_extract_topics.py  02_domain_graph.py  03_content_graph.py  04_rag.py  README.md  app.py  docker-compose.yml  entities.json  main.py  rag.py  requirements.txt  streamlit_app.py
(+39 files in other folders)
