[project]
name = "kuzu-cdkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kuzu>=0.11.1",
    "polars>=1.32.0",
    "pyarrow>=21.0.0",
    "baml-py>=0.203.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
]
